--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "private": true,
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
@@ -12,7 +13,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^7.0.6"
+    "nodemailer": "^7.0.6",
+    "textract": "^2.5.0"
   },
   "scripts": {
     "start": "node index.js",
